<?xml version="1.0"?>
<package format="2">
  <name>pi_hexapod_control</name>
  <version>1.0.5</version>
  <description>Drivers for Physik Instrumente (PI) Hexapods</description>

  <maintainer email="service@pi.de">"Physik Instrumente (PI) GmbH u. Co. KG"</maintainer>

  <license>Apache-2.0</license>

  <author email="eichmann@fzi.de">Christian Eichmann</author>
  <author email="keller@fzi.de">Philip Keller</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>pi_hexapod_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>zlib</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>libusb-1.0-dev</build_export_depend>
  <build_export_depend>pi_hexapod_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <build_export_depend>zlib</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>libusb-1.0-dev</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pi_hexapod_description</exec_depend>
  <exec_depend>pi_hexapod_gui</exec_depend>
  <exec_depend>pi_hexapod_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>zlib</exec_depend>

  <export>
    <pi_hexapod_control plugin="${prefix}/hardware_interface_plugin.xml" />
  </export>
</package>
