<?xml version="1.0"?>
<package format="2">
  <name>pi_hexapod_description</name>
  <version>1.0.5</version>
  <description>URDF descriptions for Physik Instrumente (PI) Hexapods</description>

  <maintainer email="todo@todo.todo">TODO</maintainer>

  <license>TODO</license>

  <author email="eichmann@fzi.de">Christian Eichmann</author>
  <author email="keller@fzi.de">Philip Keller</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
